@@ -11,7 +11,6 @@ Check out the [tour of how to install, configure and use astroid](https://github
 * fully operatable by [keyboard](https://github.com/astroidmail/astroid/wiki/Customizing-key-bindings).
 * graphical interface, inspired by sup. but allow buffers to be separeted and placed in several windows.
 * display html mail and some attachments inline.
-* render math using MathJax.
 * syntax highlighting of code (markdown style) and patches.
 * [themable and configurable](https://github.com/astroidmail/astroid/wiki/Customizing-the-user-interface).
 * built-in [crypto (PGP/MIME) support](https://github.com/astroidmail/astroid/wiki/Signing%2C-Encrypting-and-Decrypting).
