@@ -1,21 +1,7 @@
-<!-- ui-version: 3 (do not change when modifying theme for yourself) -->
+<!-- ui-version: 4 (do not change when modifying theme for yourself) -->
 <html>
 <head>
   <title>Astroid</title>
-  <script type="text/x-mathjax-config">
-    MathJax.Hub.Config({
-      extensions: ["tex2jax.js"],
-      jax: ["input/TeX", "output/HTML-CSS"],
-      tex2jax: {
-        inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-        displayMath: [ ['$$','$$'], ["\\[","\\]"] ],
-        processEscapes: true
-      },
-      "HTML-CSS": { availableFonts: ["TeX"] },
-      showProcessingMessages: false,
-      messageStyle: "none"
-    });
-  </script>
 </head>
 <body>
 <div id="message_container"><span id="placeholder"></span></div>
