@@ -1,4 +1,4 @@
-/* ui-version: 3 (do not change when modifying theme for yourself) */
+/* ui-version: 4 (do not change when modifying theme for yourself) */
 /* Variables */
 @if not(global-variable-exists(background-color)) {
   $background-color: #ccc !global;
