@@ -32,6 +32,9 @@
 * Thread-view: '*' toggle 'flagged' on message, 'a' toggle inbox on
   whole thread.
 
+* Removed MathJax support, since it is not widely used. Can be enabled
+  manually by adding sourcing the script in the thread-view theme file.
+
 == v0.6 / 2016-07-23
 
 * Use any editor (general XEmbed support in edit-message window): Emacs
